C2: LoopLimit node is not eliminated

XMLWordPrintable

    • b33
    • 16
    • b34
    • Verified

        The attached fuzzer test fails with the following assertion after JDK-8255120:

        To reproduce (both will trigger):
        # java -Xcomp -XX:CompileOnly=Test Test.java
        # java -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Test Test.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S154441/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7ef6f28b-eda9-48e8-bb7a-ac0cee72e955/runs/a9818b83-6452-4ea7-b69c-e87d57f606ab/workspace/open/src/hotspot/share/opto/matcher.cpp:1669), pid=21371, tid=21384
        # assert(false) failed: bad AD file
        #
        # JRE version: Java(TM) SE Runtime Environment (16.0+33) (fastdebug build 16-ea+33-2205)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+33-2205, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x142407a] Matcher::Label_Root(Node const*, State*, Node*, Node*&)+0x50a
        ............
        Command Line: -Xmx1G -Xcomp -Xbatch -XX:CompileOnly=Test -XX:CompileCommand=quiet Test
        ............
        Current thread (0x00007f0c484948b0): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=21384, stack(0x00007f0c207fc000,0x00007f0c208fd000)]


        Current CompileTask:
        C2: 1168 67 b 4 Test::mainTest (758 bytes)

        Stack: [0x00007f0c207fc000,0x00007f0c208fd000], sp=0x00007f0c208f8070, free space=1008k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x142407a] Matcher::Label_Root(Node const*, State*, Node*, Node*&)+0x50a
        V [libjvm.so+0x1424a0c] Matcher::match_tree(Node const*)+0x20c
        V [libjvm.so+0x1432046] Matcher::xform(Node*, int)+0xe46
        V [libjvm.so+0x1439bc6] Matcher::match()+0x4706
        V [libjvm.so+0xa0e81c] Compile::Code_Gen()+0x9c
        V [libjvm.so+0xa19a57] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1917
        V [libjvm.so+0x849b8c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
        V [libjvm.so+0xa297c8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe88
        V [libjvm.so+0xa2a418] CompileBroker::compiler_thread_loop()+0x5a8
        V [libjvm.so+0x18ba9b6] JavaThread::thread_main_inner()+0x256
        V [libjvm.so+0x18c1330] Thread::call_run()+0x100
        V [libjvm.so+0x15a3506] thread_native_entry(Thread*)+0x116


        Output
        ----------
        Default case invoked for:
           opcode = 188, "LoopLimit"
        o7021 LoopLimit === _ o7653 o6580 [[o6727 o7036 2092 ]]

        --N: o7021 LoopLimit === _ o7653 o6580 [[o6727 o7036 2092 ]]

           --N: o7653 Binary === _ o6580 o7045 [[o7021 ]]
           _Binary_rRegI_rRegI 100 _Binary_rRegI_rRegI
           _Binary_rax_RegI_rRegI 100 _Binary_rax_RegI_rRegI

              --N: o6580 ConI === o0 [[o7021 o7653 o6727 o7198 ]] #int:-4
              IMMI 10 IMMI
              IMMI8 5 IMMI8
              IMMI16 10 IMMI16
              RREGI 100 loadConI
              RAX_REGI 100 loadConI
              RBX_REGI 100 loadConI
              RCX_REGI 100 loadConI
              RDX_REGI 100 loadConI
              RDI_REGI 100 loadConI
              NO_RAX_RDX_REGI 100 loadConI
              STACKSLOTI 200 storeSSI

              --N: o7045 SubI === _ o7041 o6378 [[o7653 o7198 ]]
              RREGI 0 RREGI
              RAX_REGI 0 RAX_REGI
              RBX_REGI 0 RBX_REGI
              RCX_REGI 0 RCX_REGI
              RDX_REGI 0 RDX_REGI
              RDI_REGI 0 RDI_REGI
              NO_RAX_RDX_REGI 0 NO_RAX_RDX_REGI
              STACKSLOTI 100 storeSSI

           --N: o6580 ConI === o0 [[o7021 o7653 o6727 o7198 ]] #int:-4
           IMMI 10 IMMI
           IMMI8 5 IMMI8
           IMMI16 10 IMMI16
           RREGI 100 loadConI
           RAX_REGI 100 loadConI
           RBX_REGI 100 loadConI
           RCX_REGI 100 loadConI
           RDX_REGI 100 loadConI
           RDI_REGI 100 loadConI
           NO_RAX_RDX_REGI 100 loadConI
           STACKSLOTI 200 storeSSI

          1. Test.java
            9 kB
            Christian Hagedorn
          2. hs_err_pid21371.log
            172 kB
            Christian Hagedorn
          3. FuzzerUtils.java
            13 kB
            Christian Hagedorn
          4. Reduced.java
            0.7 kB
            Christian Hagedorn

              Assignee:
              Vladimir Ivanov
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: