8260370: C2: LoopLimit node is not eliminated

Reviewed-by: kvn, thartmann